--- a/index.html
+++ b/index.html
@@ -11,15 +11,7 @@
   </head>
   <body>
 
-    <div class="container">
-      <div class="banner">
-        <div class="banner__inner">
-          <h1 class="banner__title">«KATRIS» — деревянные жалюзи под размер окна + разработка дизайна + монтаж по доступной цене</h1>
-          <button type="button" class="bigbtn">Рассчитать стоимость</button>
-        </div>
-      </div>
-    </div>
-
+    <!-- баннер с анонсом и формой обратной связи для замера заказа -->
     <div class="popup">
       <div class="popup__inner">
         <div class="popup__content">
@@ -41,21 +33,113 @@
         </div>
       </div>
     </div>
-    
-  <script>
-    const popup = document.querySelector('.popup');
-    const btn = document.querySelector('.bigbtn');
-    const btnClose = document.querySelector('.btn-close');
 
-    btn.addEventListener('click', () => {
-      popup.classList.add('popup_active');
-    });
+    <div class="container">
+      <div class="banner">
+        <div class="banner__inner">
+          <h1 class="banner__title">«KATRIS» — деревянные жалюзи под размер окна + разработка дизайна + монтаж по доступной цене</h1>
+          <button type="button" class="bigbtn">Рассчитать стоимость</button>
+        </div>
+      </div>
+    </div>
 
-    document.addEventListener('click', e => {
-      if (e.target !== btn && e.target == popup || e.target == btnClose) {
-        popup.classList.remove('popup_active');
-      }
-    });
-  </script>
+    <!-- блок «Виды деревянных жалюзи» с формами заказа и ценой -->
+    <div class="container">
+      <div class="blinds">
+        <div class="blinds__content">
+          <h1 class="blinds__title">Виды деревянных жалюзи</h1>
+          <p class="blinds__text">Горизонтальные жалюзи — далеко не единственный вариант защиты от солнечного света. На нашем сайте представлены следующие разновидности жалюзи.</p>
+        </div>
+      
+        <div class="blinds__group">
+          <div class="blinds__item">
+            <div class="blinds__inner">
+              <h2 class="blinds__product">Подъемные горизонтальные</h2>
+              <div class="blinds__price">
+                <div class="old-price">от 3 065 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>1 940</span> р/м<sup>2</sup></div>
+              </div>
+              <img src="img/blinds/Горизонтальные жалюзи.jpg" alt="">
+              <p>Горизонтальные деревянные жалюзи — классический вариант защиты от солнца, который подходит для любого интерьера и типа окон: от круглых до квадратных. Ширина ламелей варьируется от 25 мм до 50 мм.</p>
+              <div class="blinds__btn">
+                <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
+              </div>
+            </div>
+            <div class="blinds__inner">
+              <h2 class="blinds__product">Сдвижные вертикальные</h2>
+              <div class="blinds__price">
+                <div class="old-price">от 4 645 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>2 940</span> р/м<sup>2</sup></div>
+              </div>
+              <img src="img/blinds/Вертикальные жалюзи.jpg" alt="">
+              <p>Данные жалюзи подходят для окон разных размеров. Кроме того, их устанавливают в качестве перегородок.</p>
+              <div class="blinds__btn">
+                <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
+              </div>
+            </div>
+            <div class="blinds__inner">
+              <h2 class="blinds__product">Подъемные рулонные</h2>
+              <div class="blinds__price">
+                <div class="old-price">от 5 530 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>3 500</span> р/м<sup>2</sup></div>
+              </div>
+              <img src="img/blinds/Рулонные шторы.jpg" alt="">
+              <p>Рулонные шторы. Рулонные шторы — нечто среднее между шторами и жалюзи. По сравнению с вертикальными и горизонтальными жалюзи, рулонные шторы-жалюзи изготавливаются в форме единого полотна, установленного на валу.</p>
+              <div class="blinds__btn">
+                <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
+              </div>
+            </div>
+            <div class="blinds__inner">
+              <h2 class="blinds__product">Подъемные горизонтальные</h2>
+              <div class="blinds__price">
+                <div class="old-price">от 3 965 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>2 340</span> р/м<sup>2</sup></div>
+              </div>
+              <img src="img/blinds/Римские шторы.jpg" alt="">
+              <p>Римские шторы. Данные шторы внешне похожи на рулонные жалюзи. Отличие состоит в конструкции — римский вариант складывается в складки.</p>
+              <div class="blinds__btn">
+                <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
+              </div>
+            </div>
+            <div class="blinds__inner">
+              <h2 class="blinds__product">Подъемные горизонтальные</h2>
+              <div class="blinds__price">
+                <div class="old-price">от 4 065 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>2 440</span> р/м<sup>2</sup></div>
+              </div>
+              <img src="img/blinds/Жалюзи-плиссе.jpg" alt="">
+              <p>Жалюзи для окон нестандартной конструкции — потолочных или наклонных. По внешним признакам плиссе выглядят на манер рулонных штор.</p>
+              <div class="blinds__btn">
+                <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br><br><br><br><br><br><br><br><br><br>
+
+    <script>
+      const popup = document.querySelector('.popup');
+      const btn = document.querySelectorAll('.bigbtn');
+      const btnClose = document.querySelector('.btn-close');
+  
+      btn.forEach(el => {
+        el.addEventListener('click', () => {
+          popup.classList.add('popup_active');
+        });
+      });
+
+      document.addEventListener('click', e => {
+        if (e.target !== btn && e.target == popup || e.target == btnClose) {
+          popup.classList.remove('popup_active');
+        }
+      });
+    </script>
   </body>
 </html>
