Completed the dimensions block

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <span>|</span>
                 <div class="new-price">от <span>1 940</span> р/м<sup>2</sup></div>
               </div>
-              <img src="img/blinds/Horizontal-blinds.jpg" alt="">
+              <img src="/img/blinds/Horizontal-blinds.jpg" alt="">
               <p>Горизонтальные деревянные жалюзи — классический вариант защиты от солнца, который подходит для любого интерьера и типа окон: от круглых до квадратных. Ширина ламелей варьируется от 25 мм до 50 мм.</p>
               <div class="blinds__btn">
                 <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
@@ -73,7 +73,7 @@
                 <span>|</span>
                 <div class="new-price">от <span>2 940</span> р/м<sup>2</sup></div>
               </div>
-              <img src="img/blinds/Vertical-blinds.jpg" alt="">
+              <img src="/img/blinds/Vertical-blinds.jpg" alt="">
               <p>Данные жалюзи подходят для окон разных размеров. Кроме того, их устанавливают в качестве перегородок.</p>
               <div class="blinds__btn">
                 <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
@@ -86,7 +86,7 @@
                 <span>|</span>
                 <div class="new-price">от <span>3 500</span> р/м<sup>2</sup></div>
               </div>
-              <img src="img/blinds/Roller-blinds.jpg" alt="">
+              <img src="/img/blinds/Roller-blinds.jpg" alt="">
               <p>Рулонные шторы. Рулонные шторы — нечто среднее между шторами и жалюзи. По сравнению с вертикальными и горизонтальными жалюзи, рулонные шторы-жалюзи изготавливаются в форме единого полотна, установленного на валу.</p>
               <div class="blinds__btn">
                 <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
@@ -99,7 +99,7 @@
                 <span>|</span>
                 <div class="new-price">от <span>2 340</span> р/м<sup>2</sup></div>
               </div>
-              <img src="img/blinds/Roman-curtains.jpg" alt="">
+              <img src="/img/blinds/Roman-curtains.jpg" alt="">
               <p>Римские шторы. Данные шторы внешне похожи на рулонные жалюзи. Отличие состоит в конструкции — римский вариант складывается в складки.</p>
               <div class="blinds__btn">
                 <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
@@ -112,7 +112,7 @@
                 <span>|</span>
                 <div class="new-price">от <span>2 440</span> р/м<sup>2</sup></div>
               </div>
-              <img src="img/blinds/Pleated-blinds.jpg" alt="">
+              <img src="/img/blinds/Pleated-blinds.jpg" alt="">
               <p>Жалюзи для окон нестандартной конструкции — потолочных или наклонных. По внешним признакам плиссе выглядят на манер рулонных штор.</p>
               <div class="blinds__btn">
                 <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
@@ -124,7 +124,229 @@
     </div>
     
     <!-- блок «Цветовая гамма» -->
-    <div class="container"></div>
+    <div class="container">
+      <section class="color-spectrum">
+        <div class="color-spectrum__content">
+          <div class="color-spectrum__title">Цветовая палитра</div>
+          <p class="color-spectrum__text">Надоели тусклые и однотипные цвета? На ваш выбор представлено 150 цветовых решений. Наши специалисты окрасят деревянные жалюзи в любой оттенок: от классических до экстравагантных тонов. Цвет будет оставаться насыщенным не менее 10 лет за счет использования качественных красок. По вашему желанию мы украсим жалюзи рисунком и покроем огнеупорным составом.</p>
+        </div>
+        <div class="color-spectrum__item">
+          <div class="color-spectrum__inner">
+            <img src="img/color-pallete/blinds-img.jpg" alt="">
+          </div>
+          <div class="color-spectrum__inner">
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-2.jpg" alt="">
+              <p>Агатовый серый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-3.jpg" alt="">
+              <p>Антрацитовый серый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-4.jpg" alt="">
+              <p>Базальтовый серый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-5.jpg" alt="">
+              <p>Бирюза</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-6.jpg" alt="">
+              <p>Бриллиантовый синий</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-7.jpg" alt="">
+              <p>Черная вишня</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-8.jpg" alt="">
+              <p>Черно коричневый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-9.jpg" alt="">
+              <p>Дуб ST-F</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-10.jpg" alt="">
+              <p>Дуб ST-G мед</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-11.jpg" alt="">
+              <p>Желтый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-12.jpg" alt="">
+              <p>Горная сосна</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-13.jpg" alt="">
+              <p>Изумрудно зеленый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-14.jpg" alt="">
+              <p>Коричневый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-15.jpg" alt="">
+              <p>Кварцевый серый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-16.jpg" alt="">
+              <p>Махагон</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-17.jpg" alt="">
+              <p>Мореный дуб ST-F</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-18.jpg" alt="">
+              <p>Натуральный дуб FL-G</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-19.jpg" alt="">
+              <p>Натуральный дуб</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-20.jpg" alt="">
+              <p>Орегон 3</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-21.jpg" alt="">
+              <p>Орегон 4</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-1.jpg" alt="">
+              <p>Орех V</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-22.jpg" alt="">
+              <p>Полосатый дуглас</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-23.jpg" alt="">
+              <p>Рустикальный дуб</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-24.jpg" alt="">
+              <p>Сапели</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-25.jpg" alt="">
+              <p>Серый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-26.jpg" alt="">
+              <p>Шогун АС</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-27.jpg" alt="">
+              <p>Шогун AD</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-28.jpg" alt="">
+              <p>Шогун AF</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-29.jpg" alt="">
+              <p>Шиколадно коричневый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-30.jpg" alt="">
+              <p>Сигнальный серый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-31.jpg" alt="">
+              <p>Стальной серый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-32.jpg" alt="">
+              <p>Стальной синий</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-33.jpg" alt="">
+              <p>Светлый дуб</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-34.jpg" alt="">
+              <p>Светло красный</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-35.jpg" alt="">
+              <p>Светло серый</p>
+            </div>
+            <div class="color-spectrum__img">
+              <img src="img/color-pallete/sample-36.jpg" alt="">
+              <p>Темный дуб</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- блок «Популярные размеры деревянных жалюзи» -->
+    <div class="container">
+      <section class="blinds-dimensions">
+        <div class="blinds-dimensions__content">
+          <div class="blinds-dimensions__title">Популярные размеры деревянных жалюзи</div>
+          <p>Размеры типовых жалюзи определяются такими параметрами, как:</p>
+          <ul>
+            <li>длина — от 330 мм до 2170 мм;</li>
+            <li>высота — от 500 мм до 1470 мм;</li>
+            <li>ширина ламели — от 25 мм, 50 мм и более (для горизонтальных и вертикальных деревянных жалюзи).</li>
+          </ul>
+          <p>В каталоге компании «KATRIS» присутствуют товары различных габаритов для пластиковых окон стандартного размера.</p>
+          <ol>
+            <li>600 мм на 900 мм.</li>
+            <li>800 мм на 1200 мм.</li>
+            <li>1300 мм на 1400 мм.</li>
+            <li>2100 мм на 1400 мм.</li>
+            <li>900 мм на 1400 мм.</li>
+          </ol>
+          <p>Размер ламелей подбирается в зависимости от размеров окна. Если ваш оконный проем нестандартен, компания «KATRIS» изготовит жалюзи по индивидуальным размерам и доставит товар в пределах Санкт-Петербурга.</p>
+        </div>
+        <div class="blinds-dimensions__price">
+          <div class="blinds-dimensions__item">
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span>(900мм x 1 400мм)</span>
+                <img src="img/blinds-dimensions/size-1.jpg" alt="">
+              </div>
+              <div class="blinds__price blinds__price_mod">
+                <div class="old-price">от 3 065 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>1 940</span> р/м<sup>2</sup></div>
+              </div>
+            </div>
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span>(1300мм x 1 400мм)</span>
+                <img src="img/blinds-dimensions/size-2.jpg" alt="">
+              </div>
+              <div class="blinds__price blinds__price_mod">
+                <div class="old-price">от 7 663 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>4 850</span> р/м<sup>2</sup></div>
+              </div>
+            </div>
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span>(2 100мм x 1 400мм)</span>
+                <img src="img/blinds-dimensions/size-3.jpg" alt="">
+              </div>
+              <div class="blinds__price blinds__price_mod">
+                <div class="old-price">от 15 326 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>9 700</span> р/м<sup>2</sup></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="blinds__btn">
+          <button class="bigbtn" type="button">Рассчитать стоимость</button>
+        </div>
+      </section>
+    </div>
 
     <script>
       const popup = document.querySelector('.popup');
