Completed the install types block

--- a/index.html
+++ b/index.html
@@ -348,6 +348,61 @@
       </section>
     </div>
 
+    <!-- блок «Типы установки» -->
+    <div class="container">
+      <section class="install-types">
+        <div class="install-types__tab-menu">
+          <ul class="install-types__tab-menu-item">
+            <li class="install-types__tab-menu-btn">Описание</li>
+            <li class="install-types__tab-menu-btn tab-menu-btn_active">Типы установки</li>
+            <li class="install-types__tab-menu-btn">Управление</li>
+            <li class="install-types__tab-menu-btn">Правильный замер</li>
+            <li class="install-types__tab-menu-btn">Типы крепления</li>
+          </ul>
+        </div>
+        <div class="blinds-dimensions__content">
+          <div class="blinds-dimensions__title">Типы установки</div>
+          <p>Установка деревянных жалюзи может быть осуществлена 4 способами. Среди которых:</p>
+          <ul>
+            <li>в проем;</li>
+            <li>на проем;</li>
+            <li>на потолок;</li>
+            <li>на створку.</li>
+          </ul>
+          <p>Способ установки подбирается на основе выбранного типа солнцезащитной конструкции и размеров оконного проема. Неправильно подобранный способ монтажа негативно скажется на эстетике помещения. При появлении сложностей вы можете получить консультацию у наших специалистов.</p>
+        </div>
+        <div class="blinds-dimensions__item">
+          <div class="blinds-dimensions__inner blinds-dimensions__inner_mod">
+            <div class="blinds-dimensions__info">
+              <span class="install-option">На стену</span>
+              <img src="img/install-types/type-1.jpg" alt="">
+            </div>
+            <div class="blinds__btn">
+              <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
+            </div>
+          </div>
+          <div class="blinds-dimensions__inner blinds-dimensions__inner_mod">
+            <div class="blinds-dimensions__info">
+              <span class="install-option">На откос</span>
+              <img src="img/install-types/type-2.jpg" alt="">
+            </div>
+            <div class="blinds__btn">
+              <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
+            </div>
+          </div>
+          <div class="blinds-dimensions__inner blinds-dimensions__inner_mod">
+            <div class="blinds-dimensions__info">
+              <span class="install-option">На створку</span>
+              <img src="img/install-types/type-3.jpg" alt="">
+            </div>
+            <div class="blinds__btn">
+              <button class="bigbtn bigbtn_mod" type="button">Рассчитать стоимость</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
     <script>
       const popup = document.querySelector('.popup');
       const btn = document.querySelectorAll('.bigbtn');
