completed the blinds control block

--- a/index.html
+++ b/index.html
@@ -403,6 +403,71 @@
       </section>
     </div>
 
+    <!-- блок «Управление» -->
+    <div class="container">
+      <section class="blinds-control">
+        <div class="install-types__tab-menu">
+          <ul class="install-types__tab-menu-item">
+            <li class="install-types__tab-menu-btn">Описание</li>
+            <li class="install-types__tab-menu-btn">Типы установки</li>
+            <li class="install-types__tab-menu-btn tab-menu-btn_active">Управление</li>
+            <li class="install-types__tab-menu-btn">Правильный замер</li>
+            <li class="install-types__tab-menu-btn">Типы крепления</li>
+          </ul>
+        </div>
+        <div class="blinds-dimensions__content">
+          <div class="blinds-dimensions__title">Управление жалюзи</div>
+          <p>Управление деревянными жалюзи не ограничивается использованием регулировочных нитей. Настроить необходимый уровень освещения можно при помощи:</p>
+          <ul>
+            <li>смартфона;</li>
+            <li>пульта на радиоуправлении;</li>
+            <li>настенной клавиши.</li>
+          </ul>
+          <p>Автоматизированное управление подходит для всех типов жалюзи: алюминиевых до рулонных штор.</p>
+        </div>
+        <div class="blinds-dimensions__price">
+          <div class="blinds-dimensions__item">
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span class="install-option">Проводное управление</span>
+                <img src="img/blinds-control/control-1.jpg" alt="">
+              </div>
+              <div class="blinds__price blinds__price_mod">
+                <div class="old-price">от 33 2000 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>19  900</span> р/м<sup>2</sup></div>
+              </div>
+            </div>
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span class="install-option">Радиоуправление</span>
+                <img src="img/blinds-control/control-2.jpg" alt="">
+              </div>
+              <div class="blinds__price blinds__price_mod">
+                <div class="old-price">от 41 080 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>24 600</span> р/м<sup>2</sup></div>
+              </div>
+            </div>
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span class="install-option">Управление смартфоном</span>
+                <img src="img/blinds-control/control-3.jpg" alt="">
+              </div>
+              <div class="blinds__price blinds__price_mod">
+                <div class="old-price">от 48 260 р/м<sup>2</sup></div>
+                <span>|</span>
+                <div class="new-price">от <span>28 900</span> р/м<sup>2</sup></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="blinds__btn">
+          <button class="bigbtn" type="button">Рассчитать стоимость</button>
+        </div>
+      </section>
+    </div>
+
     <script>
       const popup = document.querySelector('.popup');
       const btn = document.querySelectorAll('.bigbtn');
