completed the taking  measurements block

--- a/index.html
+++ b/index.html
@@ -468,6 +468,75 @@
       </section>
     </div>
 
+    <!-- блок «Правильный замер» -->
+    <div class="container">
+      <section class="taking-measurements">
+        <div class="install-types__tab-menu">
+          <ul class="install-types__tab-menu-item">
+            <li class="install-types__tab-menu-btn">Описание</li>
+            <li class="install-types__tab-menu-btn">Типы установки</li>
+            <li class="install-types__tab-menu-btn">Управление</li>
+            <li class="install-types__tab-menu-btn tab-menu-btn_active">Правильный замер</li>
+            <li class="install-types__tab-menu-btn">Типы крепления</li>
+          </ul>
+        </div>
+        <div class="blinds-dimensions__content">
+          <div class="blinds-dimensions__title">Снятие замеров</div>
+          <p>Чтобы жалюзи стали органичным дополнением интерьера нужно подобрать конструкцию в соответствии с габаритами окна. Все изделия отличаются по длине, ширине и высоте ламелей. Компания «KATRIS» рекомендует вызвать замерщика перед оформлением заказа, чтобы минимизировать риск ошибки. Выезд специалиста в пределах Санкт-Петербурга бесплатный.</p>
+        </div>
+        <div class="blinds-dimensions__price">
+          <div class="blinds-dimensions__item">
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span class="install-option">Замер при установке на проем</span>
+                <img src="img/taking-measurements/size-1.jpg" alt="">
+              </div>
+              <div class="taking-measurements__description">
+                <div class="taking-measurements__wrapper">
+                  <div class="taking-measurements__title">Рекомендация:</div>
+                  <p class="taking-measurements__text">[Ш] = [Ш проема] + 10 см</p>
+                  <p class="taking-measurements__text">[В] = [В проема] + X</p>
+                </div>
+                <div class="taking-measurements__wrapper">
+                  <div class="taking-measurements__title">Если в проем, то расчет следующий:</div>
+                  <p class="taking-measurements__text">[Ш] = [Ш проема] - 0,5 см</p>
+                  <p class="taking-measurements__text">[В] = [В проема] - 1 см</p>
+                </div>
+                <div class="taking-measurements__wrapper">
+                  <div class="taking-measurements__title">Обмер с использованием держателей нижнего карниза:</div>
+                  <p class="taking-measurements__text">[В] = [В проема] - 3 см, для 16,25 мм</p>
+                  <p class="taking-measurements__text">[В] = [В проема] - 4 см, для 50 мм</p>
+                </div>
+              </div>
+            </div>
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span class="install-option">Замер при установке на створку</span>
+                <img src="img/taking-measurements/size-2.jpg" alt="">
+              </div>
+              <div class="taking-measurements__description">
+                <div class="taking-measurements__wrapper">
+                  <div class="taking-measurements__title">Рекомендация:</div>
+                  <p class="taking-measurements__text">[Ш] = [Ш по штапику]</p>
+                  <p class="taking-measurements__text">[В] = [В рамы]</p>
+                </div>
+                <div class="taking-measurements__wrapper">
+                  <div class="taking-measurements__title">Обмер на створку с обычными кронштейнами и тросом:</div>
+                  <p class="taking-measurements__text">[Ш] = [Ш по штапику]</p>
+                  <p class="taking-measurements__text">[В] = [В по штапику] + 8 см</p>
+                </div>
+                <div class="taking-measurements__wrapper">
+                  <div class="taking-measurements__title">С ламелями 16 и 25 мм осуществляем по внутреннему пространству створок</div>
+                  <p class="taking-measurements__text">[Ш] = [Ш межрамного пространства] - 0,5 см</p>
+                  <p class="taking-measurements__text">[В] = [В проема] - 0,5 см</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
     <script>
       const popup = document.querySelector('.popup');
       const btn = document.querySelectorAll('.bigbtn');
