completed the mounting types block

--- a/index.html
+++ b/index.html
@@ -537,6 +537,67 @@
       </section>
     </div>
 
+    <!-- блок «Типы крепления» -->
+    <div class="container">
+      <section class="blinds-control">
+        <div class="install-types__tab-menu">
+          <ul class="install-types__tab-menu-item">
+            <li class="install-types__tab-menu-btn">Описание</li>
+            <li class="install-types__tab-menu-btn">Типы установки</li>
+            <li class="install-types__tab-menu-btn">Управление</li>
+            <li class="install-types__tab-menu-btn">Правильный замер</li>
+            <li class="install-types__tab-menu-btn tab-menu-btn_active">Типы крепления</li>
+          </ul>
+        </div>
+        <div class="blinds-dimensions__content">
+          <div class="blinds-dimensions__title">Типы крепления</div>
+          <p>Главное предназначение жалюзи — настройка комфортного уровня солнечного света. Данные изделия должны отличаться функциональностью. После проведения замеров и монтажа нужно подобрать карниз определиться с типом крепления.</p>
+          <ol>
+            <li>Универсальный (стена/потолок).</li>
+            <li>Для наклонных окон.</li>
+            <li>Боковой кронштейн.</li>
+            <li>Для открывающихся окон.</li>
+          </ol>
+          <p>Наша компания оказывает услуги по монтажу жалюзи. Специалисты прибудут на объект и самостоятельно подберут тип крепления для вашей комнаты.</p>
+        </div>
+        <div class="blinds-dimensions__price">
+          <div class="blinds-dimensions__item">
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span class="install-option">Универсальный</span>
+                <span class="install-option">(стена/потолок)</span>
+                <img src="img/mounting-types/type-1.jpg" alt="">
+              </div>
+            </div>
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span class="install-option">Для открывающихся</span>
+                <span class="install-option">окон</span>
+                <img src="img/mounting-types/type-2.jpg" alt="">
+              </div>
+            </div>
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span class="install-option">Для наклонных</span>
+                <span class="install-option">окон</span>
+                <img src="img/mounting-types/type-3.jpg" alt="">
+              </div>
+            </div>
+            <div class="blinds-dimensions__inner">
+              <div class="blinds-dimensions__info">
+                <span class="install-option">Универсальный боковой</span>
+                <span class="install-option">кронштейн</span>
+                <img src="img/mounting-types/type-4.jpg" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="blinds__btn">
+          <button class="bigbtn" type="button">Рассчитать стоимость</button>
+        </div>
+      </section>
+    </div>
+
     <script>
       const popup = document.querySelector('.popup');
       const btn = document.querySelectorAll('.bigbtn');
