--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 
     <!-- блок «Типы крепления» -->
     <div class="container">
-      <section class="blinds-control">
+      <section class="mounting-types">
         <div class="install-types__tab-menu">
           <ul class="install-types__tab-menu-item">
             <li class="install-types__tab-menu-btn">Описание</li>
