completed the work stages block

--- a/index.html
+++ b/index.html
@@ -598,6 +598,37 @@
       </section>
     </div>
 
+    <!-- блок «Этапы работы» -->
+    <div class="container">
+      <section class="work-stages">
+        <div class="work-stages__content">
+          <div class="work-stages__title">Этапы работы</div>
+          <div class="word-stages__info-block">
+            <p class="word-stages__info-text">Купить деревянные жалюзи в компании «KATRIS» — экономия времени и 100 % результат.</p>
+            <ul class="word-stages__info-list">
+              <li class="word-stages__info-link">Предварительная консультация и согласование пожеланий. На данном этапе консультанты соберут необходимую информацию и рассчитают стоимость проекта.</li>
+              <li class="word-stages__info-link">Замеры. На объект приедет наш замерщик, чтобы снять мерки для будущего изделия. Также специалисты возьмет с собой образцы ранее изготовленных изделий.</li>
+              <li class="word-stages__info-link">Проектирование и визуализация. Перед тем, как приступить к изготовлению дизайнеры спроектируют виртуальный макет изделия. Мы изготовим деревянные жалюзи после вашего одобрения.</li>
+              <li class="word-stages__info-link">Производство жалюзи. Ваш заказ будет изготовлен в течение 3 рабочих дней.</li>
+              <li class="word-stages__info-link">Доставка. Как только солнцезащитная система будет готова, мы доставим его до адреса. С вами свяжется оператор для согласования времени.</li>
+              <li class="word-stages__info-link">Установка. Малейшая ошибка при установке может привести к поломке конструкции. Во избежание подобных проблем мы возьмем монтаж на себя.</li>
+            </ul>
+            <p class="word-stages__info-text">Оформить заказ или уточнить детали сотрудничества можно по номеру телефона — +78123372405 или через электронную почту — info.katris@mail.ru. Также вы можете лично посетить наш офис в Санкт-Петербурге.</p>
+          </div>
+          <div class="blinds__btn">
+            <button class="bigbtn" type="button">Рассчитать стоимость</button>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- блок «Ответы на частые вопросы» -->
+    <div class="container">
+      <section class="faq">
+        
+      </section>
+    </div>
+
     <script>
       const popup = document.querySelector('.popup');
       const btn = document.querySelectorAll('.bigbtn');
